--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <body>
         <h1 align="center">Md. Tanzim Shahriar</h1>
         <p align="center">Scholar Garden-1, Daffodil International University, Ashulia, Dhaka</p>
-        <p align="center">Contact: +88 01754463739 &nbsp;&nbsp;&nbsp;<img src="picture/email.jpg" 
+        <p align="center">Contact: +88 01754463739 &nbsp;&nbsp;&nbsp;<img src="email.jpg" 
             width="20" height="20"><a href="mailto:tanzimshahriar739@gmail.com">tanzimshahriar739@gmail.com</a></p>
-        <p align="center"><img src="picture/linkedin.png" width="10" height="10">
+        <p align="center"><img src="linkedin.png" width="10" height="10">
             <a href="https://www.linkedin.com/in/tanzim-shahriar-mahi-3a7734291/">LinkedIn</a>
-            &nbsp;&nbsp;&nbsp;<img src="picture/github.png" width="10" height="10">
+            &nbsp;&nbsp;&nbsp;<img src="github.png" width="10" height="10">
             <a href="https://github.com/Tanzim-Shahriar">Github</a>&nbsp;&nbsp;&nbsp;
-            <img src="picture/portfolio.jpeg" width="20" height="20">
+            <img src="portfolio.jpeg" width="20" height="20">
             <a href="https://sites.google.com/diu.edu.bd/tanzim1518/home">Portfolio</a></p>
         <hr>
         <font size="4">Summary</font>
