--- a/index.html
+++ b/index.html
@@ -4,18 +4,19 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>My Resume</title>
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css" integrity="sha512-Evv84Mr4kqVGRNSgIGL/F/aIDqQb7xQ2vcrdIwxfjThSH8CSR7PBEakCr51Ck+w+/U6swU2Im1vVX0SVk9ABhg==" crossorigin="anonymous" referrerpolicy="no-referrer" />
         <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1 align="center">Md. Tanzim Shahriar</h1>
         <p align="center">Scholar Garden-1, Daffodil International University, Ashulia, Dhaka</p>
-        <p align="center">Contact: +88 01754463739 &nbsp;&nbsp;&nbsp;<img src="email.jpg" 
-            width="20" height="20"><a href="mailto:tanzimshahriar739@gmail.com">tanzimshahriar739@gmail.com</a></p>
-        <p align="center"><img src="linkedin.png" width="10" height="10">
+        <p align="center"><i class="fa-solid fa-address-book"></i> Contact: +88 01754463739 &nbsp;&nbsp;&nbsp;
+            <i class="fa-regular fa-envelope"></i> <a href="mailto:tanzimshahriar739@gmail.com">tanzimshahriar739@gmail.com</a></p>
+        <p align="center"> <i class="fa-brands fa-linkedin"></i>
             <a href="https://www.linkedin.com/in/tanzim-shahriar-mahi-3a7734291/">LinkedIn</a>
-            &nbsp;&nbsp;&nbsp;<img src="github.png" width="10" height="10">
+            &nbsp;&nbsp;&nbsp; <i class="fa-brands fa-github"></i>
             <a href="https://github.com/Tanzim-Shahriar">Github</a>&nbsp;&nbsp;&nbsp;
-            <img src="portfolio.jpeg" width="20" height="20">
+            <i class="fa-sharp fa-solid fa-globe"></i>
             <a href="https://sites.google.com/diu.edu.bd/tanzim1518/home">Portfolio</a></p>
         <hr>
         <font size="4">Summary</font>
