--- a/index.html
+++ b/index.html
@@ -106,10 +106,17 @@
                 I worked as a team member. Using this project, anyone can get facilities like booking 
                 appointments, taking video consultations with a preferred doctor, viewing prescriptions, 
                 making online payments, and so on. HTML, CSS, JavaScript, SQL, and PHP are used in this project.</li>
+                <br>
             
             <li><b>FX and Crypto Currency Live Tracker: </b>This project is for my university courses. Anyone can track 
                 foreign exchange money rates and cryptocurrency rates live at any time using this project. Users can also 
                 receive real-time notifications. HTML, CSS, JavaScript are used in this project.</li>
+                <br>
+            <li><b>Multi-Site Corporate Network: </b>This project is for my university courses, where I worked as a team member. This robust corporate network 
+                infrastructure is essential for efficient business operations across multiple locations. This project addresses 
+                the need for seamless communication, secure data exchange, and efficient resource allocation. The setup incorporates 
+                WAN and LAN technologies, RIP for inter-branch communication, DHCP for dynamic IP allocation, DNS for domain name resolution, 
+                and static IPs for VLANs.</li>
             
         </ul>
         <hr>
