--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     </head>
     <body>
         <h1 align="center">Md. Tanzim Shahriar</h1>
-        <p align="center">Yunus Khan Scholar Garden-1, Daffodil International University, Ashulia, Dhaka</p>
+        <p align="center">Younus Khan Scholar Garden-1, Daffodil International University, Ashulia, Dhaka</p>
         <p align="center"><i class="fa-solid fa-address-book"></i> Contact: +88 01754463739 &nbsp;&nbsp;&nbsp;
             <i class="fa-regular fa-envelope"></i> <a href="mailto:tanzimshahriar739@gmail.com">tanzimshahriar739@gmail.com</a></p>
         <p align="center"> <i class="fa-brands fa-linkedin"></i>
